# Qchat

./: .gitignore  AvailablePersons.qml  CMakeLists.txt  DynButton.qml  MainPage.qml  NextPage.qml  PersonPage.qml  README.md  main.cpp  main.qml  meson.build  qml.qrc
Release/Qchat_autogen/: moc_predefs.h
src_c++/: CMakeLists.txt  msglist.cpp  msglist.h  serverslist.cpp  serverslist.h  socketbackend.cpp  socketbackend.h
src_c++/test/: audiobackend.cpp  audiobackend.h
src_qml/: AboutPopup.qml  AvailablePersons.qml  MessagesList.qml  PersonPage.qml  SettingPage.qml  mainPage.qml  nextPage.qml
src_qml/test/: TestAudioPage.qml
